<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">万能宝</string>
    <string name="lable_homeTab">首页</string>
    <string name="lable_shopTab">在线商城</string>
    <string name="lable_storeTab">附近店面</string>
    <string name="lable_btnsub">预约</string>
    <string name="lable_getShortMessage">验证</string>
    <string name="lable_look_record">查看记录</string>
    <string name="lable_memberDataTitle">会员信息</string>
    <string name="lable_memberNumber">账号</string>
    <string name="lable_memberName">姓名</string>
    <string name="lable_memberPhone">手机号码</string>
    <string name="lable_memberGender">性别</string>
    <string name="lable_memberBirthday">出生日期</string>
    <string name="lable_memberPersonID">身份证</string>
    <string name="lable_memberMyBank">我的银行</string>
    <string name="lable_CardNumber">卡号</string>
    <string name="lable_RechargeMoney">充值金额</string>
    <string name="lable_methodsOfPayment">支付方式</string>
    <string name="determine">确定</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_look_record">LookRecordActivity</string>
    <string name="title_activity_member_data">MemberDataActivity</string>
    <string name="title_activity_on_line_recharge">OnLineRechargeActivity</string>
    <string name="title_activity_rebate_query">RebateQueryActivity</string>
    <string name="reg">注册</string>
    <string name="rebateQuery">返利查询</string>
    <string name="onLineRecharge">在线充值</string>
    <string name="yesterdayIncome">昨日收益</string>
    <string name="accountBalance">账户余额</string>
    <string name="rebateBalance">返利余额</string>
    <string name="mentionNow">账户提现</string>
    <string name="cashRebate">返利提现</string>
    <string name="millionProfit">万份收益</string>
    <string name="countProfit">累计收益</string>
    <string name="title_activity_cctransfer">CCTransferActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ccTransfer">卡卡转账</string>
    <string name="title_activity_my_make">MyMake</string>
    <string name="lable_myMake">我的预约</string>
    <string name="title_activity_system_message">SystemMessageActivity</string>
    <string name="system_message">系统信息</string>
    <string name="title_activity_safety_center">SafetyCenterActivity</string>
    <string name="safetycenter">安全中心</string>
    <string name="title_activity_convenience_services">ConvenienceServicesActivity</string>
    <string name="convenience_services">便民服务</string>
    <string name="title_activity_pay_phonebill">PayPhoneBillActivity</string>
    <string name="pay_phonebill">话费充值</string>
    <string name="please_import_phone_num">请输入充值手机号</string>
    <string name="recharge_amount">充值金额</string>
    <string name="import_pwd">输入密码</string>
    <string name="immediately_recharge">立即充值</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="changepwd">修改密码</string>
    <string name="title_activity_go_back_pwd">GoBackPwdActivity</string>
    <string name="gobackpwd">找回密码</string>
    <string name="title_activity_short_message_verification">ShortMessageVerificationActivity</string>
    <string name="shortMessageVerification">短信验证</string>
    <string name="title_activity_protection_verification">ProtectionVerificationActivity</string>
    <string name="protectionVerification">密保验证</string>
    <string name="title_activity_set_up_protection_verification">SetUpProtectionVerificationActivity</string>
    <string name="setUpProtectionVerification">密保设置</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="helpFeedBack">帮助反馈</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_make_details">MakeDetailsActivity</string>
    <string name="make">预约</string>
    <string name="title_activity_reset_pwd">ResetPwdActivity</string>
    <string name="setpwd">设置密码</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="monthProfit">月收益</string>
    <string name="yearProfit">年收益率</string>
    <string name="title_activity_staff_main">StaffMainActivity</string>
    <string name="title_activity_staff_data">StaffDataActivity</string>
    <string name="title_activity_staff_change_data">StaffChangeDataActivity</string>
    <string name="title_activity_staff_identity">StaffIdentityActivity</string>
    <string name="title_activity_staff_balance_query">StaffBalanceQueryActivity</string>
    <string name="title_activity_staff_look_record">StaffLookRecordActivity</string>
    <string name="title_activity_staff_mention_now">StaffMentionNowActivity</string>
    <string name="title_activity_my_bank">MyBankActivity</string>
    <string name="title_activity_sli_test">SliTest</string>
    <string name="title_activity_staff_up_load_goods">StaffUpLoadGoodsActivity</string>
    <string name="upLoadGoods">上传商品</string>
    <string name="title_activity_mention_now">MentionNowActivity</string>
    <string name="title_activity_goods_details">GoodsDetailsActivity</string>
    <string name="title_activity_goods_search">GoodsSearchActivity</string>
    <string name="title_activity_mall_main">MallMainActivity</string>
    <string name="title_activity_settlement">SettlementActivity</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_edit_address">EditAddressActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_ask">AskActivity</string>
    <string name="title_activity_bug_goods_details">BugGoodsDetailsActivity</string>
    <string name="title_activity_goods_details_list">GoodsDetailsListActivity</string>
    <string name="title_activity_store_goods">StoreGoodsActivity</string>
    <string name="title_activity_shop_evaluation">ShopEvaluationActivity</string>
    <string name="title_activity_my_collection_list">MyCollectionListActivity</string>
    <string name="title_activity_make_person">MakePersonActivity</string>
    <string name="makeperson">预约人员</string>
    <string name="title_activity_staff_goods_manage">StaffGoodsManageActivity</string>
    <string name="title_activity_staff_goods_preview">StaffGoodsPreviewActivity</string>
    <string name="goodsPreview">商品预览</string>
    <string name="title_activity_staff_store_maintenance">StaffStoreMaintenance</string>

    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
</resources>
