<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context="com.chanxa.wnb.activity.RebateQueryActivity">

    <include
        android:id="@+id/container_rebateQueryTitle"
        layout="@layout/default_title_layout" />

    <!--<ScrollView
        android:layout_below="@+id/container_rebateQueryTitle"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_below="@+id/container_rebateQueryTitle"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/container_yesterdayIncome"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_edit"
                android:paddingRight="20dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/yesterdayIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_yesterdayIncome"
                    android:text="0.00"
                    android:textColor="@android:color/black"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/container_accountBalance"
                android:layout_below="@+id/container_yesterdayIncome"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_edit"
                android:paddingRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/accountBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_accountBalance"
                    android:text="0.00"
                    android:textColor="@android:color/black"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_rebateBalance"
                android:layout_below="@+id/container_accountBalance"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_edit"
                android:paddingRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/rebateBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_rebateBalance"
                    android:text="0.00"
                    android:textColor="@android:color/black"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_mentionNow"
                android:layout_below="@+id/container_rebateBalance"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_edit"
                android:paddingRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/mentionNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_mentionNow"
                    android:text=">"
                    android:textColor="@android:color/black"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_cashRebate"
                android:layout_below="@+id/container_mentionNow"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_edit"
                android:paddingRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/cashRebate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_cashRebate"
                    android:text=">"
                    android:textColor="@android:color/black"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:layout_below="@+id/container_mentionNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp">

                    <RelativeLayout
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/million_profit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/millionProfit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="10dp"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_millionProfit"
                            android:text="24342"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:background="@drawable/count_profit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:textSize="14sp" />

                        <TextView
                            android:text="@string/countProfit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:paddingBottom="10dp"
                            android:layout_alignParentBottom="true"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_countProfit"
                            android:text="123123"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp">

                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:background="@drawable/month_profit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/monthProfit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:layout_alignParentRight="true"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_monthProfit"
                            android:text="24342"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:background="@drawable/year_profit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:textSize="14sp" />

                        <TextView
                            android:text="@string/yearProfit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_yearProfit"
                            android:text="123123"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->
</RelativeLayout>
